--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,14 @@
             <version>[2.0.0,3.0.0)</version>
         </dependency>
 
+        <!-- Apache http client (для простой работы с http запросами на backend) -->
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.13</version>
+        </dependency>
+
+
     </dependencies>
 
 </project>
