--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,13 @@
             <version>4.5.13</version>
         </dependency>
 
+        <!-- Dotenv dependency -->
+        <dependency>
+            <groupId>io.github.cdimascio</groupId>
+            <artifactId>dotenv-java</artifactId>
+            <version>2.2.3</version>
+        </dependency>
+
 
     </dependencies>
 
