refactored json objects

--- a/src/main/resources/.env
+++ b/src/main/resources/.env
@@ -1,4 +1,4 @@
 SERVER_HOST=http://localhost:8081/
 ID_BUILDING=1
-EXIT_PORT_PATH=/dev/ttyUSB0
-ENTER_PORT_PATH=
+BARRIER_1_PORT=/dev/ttyUSB0
+BARRIER_2_PORT=
