threads and error modal
added error modal window;
multithreaded all possible http requests;

--- a/src/main/resources/.env
+++ b/src/main/resources/.env
@@ -1,5 +1,5 @@
 SERVER_HOST=http://localhost:8088/
 PHOTO_HOST=http://localhost:8081/storage
 ID_BUILDING=3
-BARRIER_1_PORT=/dev/pts/2
+BARRIER_1_PORT=
 BARRIER_2_PORT=
